--- a/khyeras/_dev/styles/khyeras_v1/template/overall_header.html
+++ b/khyeras/_dev/styles/khyeras_v1/template/overall_header.html
@@ -130,127 +130,129 @@
 		<section id="page-welcome" class="page-welcome">
 			<div class="wrapper">
 				<div class="panel">
-					<div class="flex-row flex-row-20">
-						<div class="introduction flex-column">
-							<p>All at once, the Eidolon's restoration of Khy'eras was obliterated when Bhelest unlocked ancient, concealed magic. With newfound talents, the mage exiled the Eidolons and amassed legions of the undead. Two hundred years of terror transpired until Cecilia of Fellsgard gathered followers to bring forth Bhelest's downfall. Free from nightmares, the expansive realm flourished and explorers journeyed from cities. People referred to Khy'eras as "The Neverend", unsure of its boundaries. Some claimed that those who departed found only death, but others discovered something else entirely - hope and adventures.</p>
-							<p><a href="//google.com">Read more...</a></p>
-						</div>
-						<div class="flex-column">
-							<h5>Announcements</h5>
-							<ul>
-								<li><a href="/">Announcement #01</a></li>
-								<li><a href="/">Announcement #02</a></li>
-								<li><a href="/">Announcement #03</a></li>
-							</ul>
-							<h5>Events</h5>
-							<ul>
-								<li><a href="/">Event #01</a></li>
-								<li><a href="/">Event #02</a></li>
-								<li><a href="/">Event #03</a></li>
-							</ul>
-						</div>
-						<div class="user-information flex-column">
-							<!-- DEFINE $DISPLAY_TIME -->
-								<p><!-- IF S_USER_LOGGED_IN -->{LAST_VISIT_DATE}<!-- ELSE -->{CURRENT_TIME}<!-- ENDIF -->.<!-- IF S_USER_LOGGED_IN --> {CURRENT_TIME}.<!-- ENDIF --></p>
-							<!-- ENDDEFINE -->
-							<!-- DEFINE $DISPLAY_AVATAR -->
-								<div class="user-avatar">
-									<div class="image-wrap">
-										<!-- IF CURRENT_USER_AVATAR -->
-											{CURRENT_USER_AVATAR}
-										<!-- ELSE -->
-											<img src="{T_THEME_PATH}/images/no_avatar.gif" alt="Default Avatar" />
-										<!-- ENDIF -->
+					<div class="inner">
+						<div class="flex-row flex-row-20">
+							<div class="introduction flex-column">
+								<p>All at once, the Eidolon's restoration of Khy'eras was obliterated when Bhelest unlocked ancient, concealed magic. With newfound talents, the mage exiled the Eidolons and amassed legions of the undead. Two hundred years of terror transpired until Cecilia of Fellsgard gathered followers to bring forth Bhelest's downfall. Free from nightmares, the expansive realm flourished and explorers journeyed from cities. People referred to Khy'eras as "The Neverend", unsure of its boundaries. Some claimed that those who departed found only death, but others discovered something else entirely - hope and adventures.</p>
+								<p><a href="//google.com">Read more...</a></p>
+							</div>
+							<div class="flex-column">
+								<h5>Announcements</h5>
+								<ul>
+									<li><a href="/">Announcement #01</a></li>
+									<li><a href="/">Announcement #02</a></li>
+									<li><a href="/">Announcement #03</a></li>
+								</ul>
+								<h5>Events</h5>
+								<ul>
+									<li><a href="/">Event #01</a></li>
+									<li><a href="/">Event #02</a></li>
+									<li><a href="/">Event #03</a></li>
+								</ul>
+							</div>
+							<div class="user-information flex-column">
+								<!-- DEFINE $DISPLAY_TIME -->
+									<p><!-- IF S_USER_LOGGED_IN -->{LAST_VISIT_DATE}<!-- ELSE -->{CURRENT_TIME}<!-- ENDIF -->.<!-- IF S_USER_LOGGED_IN --> {CURRENT_TIME}.<!-- ENDIF --></p>
+								<!-- ENDDEFINE -->
+								<!-- DEFINE $DISPLAY_AVATAR -->
+									<div class="user-avatar">
+										<div class="image-wrap">
+											<!-- IF CURRENT_USER_AVATAR -->
+												{CURRENT_USER_AVATAR}
+											<!-- ELSE -->
+												<img src="{T_THEME_PATH}/images/no_avatar.gif" alt="Default Avatar" />
+											<!-- ENDIF -->
+										</div>
 									</div>
-								</div>
-							<!-- ENDDEFINE -->
-							<!-- IF S_REGISTERED_USER -->
-								<!-- EVENT navbar_header_user_profile_prepend -->
-								<!-- EVENT navbar_header_username_prepend -->
-								<h5>Welcome, <a href="{U_PROFILE}">{CURRENT_USERNAME_SIMPLE}</a>.</h5>
-								<!-- EVENT navbar_header_username_append -->
-								{$DISPLAY_AVATAR}
-								{$DISPLAY_TIME}
-								<ul class="welcome-buttons">
-									<!-- EVENT navbar_header_profile_list_before -->
-									<!-- IF S_DISPLAY_PM -->
+								<!-- ENDDEFINE -->
+								<!-- IF S_REGISTERED_USER -->
+									<!-- EVENT navbar_header_user_profile_prepend -->
+									<!-- EVENT navbar_header_username_prepend -->
+									<h5>Welcome, <a href="{U_PROFILE}">{CURRENT_USERNAME_SIMPLE}</a>.</h5>
+									<!-- EVENT navbar_header_username_append -->
+									{$DISPLAY_AVATAR}
+									{$DISPLAY_TIME}
+									<ul class="welcome-buttons">
+										<!-- EVENT navbar_header_profile_list_before -->
+										<!-- IF S_DISPLAY_PM -->
+											<li>
+												<a class="button" href="{U_PRIVATEMSGS}">
+													<i class="icon fa-inbox fa-fw" aria-hidden="true"></i><span>{L_PRIVATE_MESSAGES}</span>
+													<strong class="badge<!-- IF not PRIVATE_MESSAGE_COUNT --> hidden<!-- ENDIF -->">{PRIVATE_MESSAGE_COUNT}</strong>
+												</a>
+											</li>
+										<!-- ENDIF -->
+										<!-- IF S_NOTIFICATIONS_DISPLAY -->
+											<li class="dropdown-container">
+												<a href="{U_VIEW_ALL_NOTIFICATIONS}" id="notification_list_button" class="button dropdown-trigger dropdown-toggle">
+													<i class="icon fa-bell fa-fw" aria-hidden="true"></i><span>{L_NOTIFICATIONS}</span>
+													<strong class="badge<!-- IF not NOTIFICATIONS_COUNT --> hidden<!-- ENDIF -->">{NOTIFICATIONS_COUNT}</strong>
+												</a>
+												<!-- INCLUDE notification_dropdown.html -->
+											</li>
+										<!-- ENDIF -->
+										<!-- IF U_ACP -->
+											<li>
+												<a class="button" href="{U_ACP}" title="{L_ACP}">
+													<i class="icon fa-cogs fa-fw" aria-hidden="true"></i><span>{L_ACP_SHORT}</span>
+												</a>
+											</li>
+										<!-- ENDIF -->
+										<!-- IF U_MCP -->
+											<li>
+												<a class="button" href="{U_MCP}" title="{L_MCP}">
+													<i class="icon fa-gavel fa-fw" aria-hidden="true"></i><span>{L_MCP_SHORT}</span>
+												</a>
+											</li>
+										<!-- ENDIF -->
+										<!-- IF S_REGISTERED_USER -->
+											<li>
+												<a class="button" href="{U_PROFILE}" title="{L_PROFILE}">
+													<i class="icon fa-sliders fa-fw" aria-hidden="true"></i><span>{L_PROFILE}</span>
+												</a>
+											</li>
+										<!-- ENDIF -->
 										<li>
-											<a class="button" href="{U_PRIVATEMSGS}">
-												<i class="icon fa-inbox fa-fw" aria-hidden="true"></i><span>{L_PRIVATE_MESSAGES}</span>
-												<strong class="badge<!-- IF not PRIVATE_MESSAGE_COUNT --> hidden<!-- ENDIF -->">{PRIVATE_MESSAGE_COUNT}</strong>
+											<a class="button" href="{U_USER_PROFILE}" title="{L_READ_PROFILE}">
+												<i class="icon fa-user fa-fw" aria-hidden="true"></i><span>{L_READ_PROFILE}</span>
 											</a>
 										</li>
-									<!-- ENDIF -->
-									<!-- IF S_NOTIFICATIONS_DISPLAY -->
-										<li class="dropdown-container">
-											<a href="{U_VIEW_ALL_NOTIFICATIONS}" id="notification_list_button" class="button dropdown-trigger dropdown-toggle">
-												<i class="icon fa-bell fa-fw" aria-hidden="true"></i><span>{L_NOTIFICATIONS}</span>
-												<strong class="badge<!-- IF not NOTIFICATIONS_COUNT --> hidden<!-- ENDIF -->">{NOTIFICATIONS_COUNT}</strong>
-											</a>
-											<!-- INCLUDE notification_dropdown.html -->
-										</li>
-									<!-- ENDIF -->
-									<!-- IF U_ACP -->
 										<li>
-											<a class="button" href="{U_ACP}" title="{L_ACP}">
-												<i class="icon fa-cogs fa-fw" aria-hidden="true"></i><span>{L_ACP_SHORT}</span>
+											<a class="button" href="{U_LOGIN_LOGOUT}" title="{L_LOGIN_LOGOUT}" accesskey="x">
+												<i class="icon fa-power-off fa-fw" aria-hidden="true"></i><span>{L_LOGIN_LOGOUT}</span>
 											</a>
 										</li>
-									<!-- ENDIF -->
-									<!-- IF U_MCP -->
+										<!-- IF U_RESTORE_PERMISSIONS -->
+											<li>
+												<a class="button" href="{U_RESTORE_PERMISSIONS}" title="{L_RESTORE_PERMISSIONS}">
+													<i class="icon fa-refresh fa-fw" aria-hidden="true"></i><span>{L_RESTORE_PERMISSIONS}</span>
+												</a>
+											</li>
+										<!-- ENDIF -->
+										<!-- EVENT navbar_header_profile_list_after -->
+									</ul>
+									<!-- EVENT navbar_header_user_profile_append -->
+								<!-- ELSE -->
+									<h5>Welcome, {L_GUEST}.</h5>
+									{$DISPLAY_AVATAR}
+									{$DISPLAY_TIME}
+									<ul class="welcome-buttons">
 										<li>
-											<a class="button" href="{U_MCP}" title="{L_MCP}">
-												<i class="icon fa-gavel fa-fw" aria-hidden="true"></i><span>{L_MCP_SHORT}</span>
+											<a class="button" href="{U_LOGIN_LOGOUT}" title="{L_LOGIN_LOGOUT}" accesskey="x">
+												<i class="icon fa-power-off fa-fw" aria-hidden="true"></i><span>{L_LOGIN_LOGOUT}</span>
 											</a>
 										</li>
-									<!-- ENDIF -->
-									<!-- IF S_REGISTERED_USER -->
-										<li>
-											<a class="button" href="{U_PROFILE}" title="{L_PROFILE}">
-												<i class="icon fa-sliders fa-fw" aria-hidden="true"></i><span>{L_PROFILE}</span>
-											</a>
-										</li>
-									<!-- ENDIF -->
-									<li>
-										<a class="button" href="{U_USER_PROFILE}" title="{L_READ_PROFILE}">
-											<i class="icon fa-user fa-fw" aria-hidden="true"></i><span>{L_READ_PROFILE}</span>
-										</a>
-									</li>
-									<li>
-										<a class="button" href="{U_LOGIN_LOGOUT}" title="{L_LOGIN_LOGOUT}" accesskey="x">
-											<i class="icon fa-power-off fa-fw" aria-hidden="true"></i><span>{L_LOGIN_LOGOUT}</span>
-										</a>
-									</li>
-									<!-- IF U_RESTORE_PERMISSIONS -->
-										<li>
-											<a class="button" href="{U_RESTORE_PERMISSIONS}" title="{L_RESTORE_PERMISSIONS}">
-												<i class="icon fa-refresh fa-fw" aria-hidden="true"></i><span>{L_RESTORE_PERMISSIONS}</span>
-											</a>
-										</li>
-									<!-- ENDIF -->
-									<!-- EVENT navbar_header_profile_list_after -->
-								</ul>
-								<!-- EVENT navbar_header_user_profile_append -->
-							<!-- ELSE -->
-								<h5>Welcome, {L_GUEST}.</h5>
-								{$DISPLAY_AVATAR}
-								{$DISPLAY_TIME}
-								<ul class="welcome-buttons">
-									<li>
-										<a class="button" href="{U_LOGIN_LOGOUT}" title="{L_LOGIN_LOGOUT}" accesskey="x">
-											<i class="icon fa-power-off fa-fw" aria-hidden="true"></i><span>{L_LOGIN_LOGOUT}</span>
-										</a>
-									</li>
-									<!-- IF S_REGISTER_ENABLED and not (S_SHOW_COPPA or S_REGISTRATION) -->
-										<li>
-											<a class="button" href="{U_REGISTER}">
-												<i class="icon fa-pencil-square-o fa-fw" aria-hidden="true"></i><span>{L_REGISTER}</span>
-											</a>
-										</li>
-									<!-- ENDIF -->
-								</ul>
-								<!-- EVENT navbar_header_logged_out_content -->
-							<!-- ENDIF -->
+										<!-- IF S_REGISTER_ENABLED and not (S_SHOW_COPPA or S_REGISTRATION) -->
+											<li>
+												<a class="button" href="{U_REGISTER}">
+													<i class="icon fa-pencil-square-o fa-fw" aria-hidden="true"></i><span>{L_REGISTER}</span>
+												</a>
+											</li>
+										<!-- ENDIF -->
+									</ul>
+									<!-- EVENT navbar_header_logged_out_content -->
+								<!-- ENDIF -->
+							</div>
 						</div>
 					</div>
 				</div>
@@ -260,39 +262,41 @@
 		<section id="featured-content" class="featured-content">
 			<div class="wrapper">
 				<div class="panel">
-					<div class="flex-row flex-row-10">
-						<div class="flex-column featured-title"><h5>Featured</h5></div>
-						<div class="flex-column featured-mvp">
-							<a href="//google.com">
-								<div class="image-wrap">
-									<img src="{T_THEME_PATH}/images/featured-mvp.jpg" alt="MVP" />
-								</div>
-								<p>MVP: Deanna DiCorvino</p>
-							</a>
-						</div>
-						<div class="flex-column featured-story">
-							<a href="//google.com">
-								<div class="image-wrap">
-									<img src="{T_THEME_PATH}/images/featured-story.jpg" alt="Story" />
-								</div>
-								<p>Story: Best Thread Ever</p>
-							</a>
-						</div>
-						<div class="flex-column featured-lore">
-							<a href="//google.com">
-								<div class="image-wrap">
-									<img src="{T_THEME_PATH}/images/featured-lore.jpg" alt="Lore" />
-								</div>
-								<p>Lore: Dragons</p>
-							</a>
-						</div>
-						<div class="flex-column featured-event">
-							<a href="//google.com">
-								<div class="image-wrap">
-									<img src="{T_THEME_PATH}/images/featured-event.jpg" alt="Event" />
-								</div>
-								<p>Event: It's An Event</p>
-							</a>
+					<div class="inner">
+						<div class="flex-row flex-row-10">
+							<div class="flex-column featured-title"><h5>Featured</h5></div>
+							<div class="flex-column featured-mvp">
+								<a href="//google.com">
+									<div class="image-wrap">
+										<img src="{T_THEME_PATH}/images/featured-mvp.jpg" alt="MVP" />
+									</div>
+									<p>MVP: Deanna DiCorvino</p>
+								</a>
+							</div>
+							<div class="flex-column featured-story">
+								<a href="//google.com">
+									<div class="image-wrap">
+										<img src="{T_THEME_PATH}/images/featured-story.jpg" alt="Story" />
+									</div>
+									<p>Story: Best Thread Ever</p>
+								</a>
+							</div>
+							<div class="flex-column featured-lore">
+								<a href="//google.com">
+									<div class="image-wrap">
+										<img src="{T_THEME_PATH}/images/featured-lore.jpg" alt="Lore" />
+									</div>
+									<p>Lore: Dragons</p>
+								</a>
+							</div>
+							<div class="flex-column featured-event">
+								<a href="//google.com">
+									<div class="image-wrap">
+										<img src="{T_THEME_PATH}/images/featured-event.jpg" alt="Event" />
+									</div>
+									<p>Event: It's An Event</p>
+								</a>
+							</div>
 						</div>
 					</div>
 				</div>
