Remove commented code

--- a/khyeras/_dev/styles/khyeras_v1/theme/scss/_variables.scss
+++ b/khyeras/_dev/styles/khyeras_v1/theme/scss/_variables.scss
@@ -5,6 +5,13 @@ $assets: '../theme';
 $fonts: $assets + '/fonts/';
 $images: $assets + '/images/';
 
+/* Classes
+========================================================================== */
+
+$overall: section-overall;
+$ucp: section-ucp;
+$mcp: section-mcp;
+
 /* Colors
 ========================================================================== */
 
