--- a/glowbug-forum/_dev/styles/glowbug_v1/theme/scss/_custom-variables.scss
+++ b/glowbug-forum/_dev/styles/glowbug_v1/theme/scss/_custom-variables.scss
@@ -6,6 +6,7 @@ $color-02: #000000; // black
 $color-03: #5d5aff; // blue
 $color-04: #444444; // blackish
 $color-05: #804080; // blue
+$color-06: #eeeeee; // gray
 
 // Fonts
 $font-01: 'Open Sans', Helvetica, Arial, sans-serif;
