Update templates, comment format, and add responsive styles

--- a/glowbug-forum/_dev/styles/glowbug_v1/theme/scss/_custom-variables.scss
+++ b/glowbug-forum/_dev/styles/glowbug_v1/theme/scss/_custom-variables.scss
@@ -11,3 +11,9 @@ $color-07: #dddddd; // gray
 
 // Fonts
 $font-01: 'Open Sans', Helvetica, Arial, sans-serif;
+
+// Responsive
+$respond-01: 1199px;
+$respond-02: 768px;
+$respond-03: 540px;
+$respond-04: 480px;
