--- a/glowbug-forum/ext/ernadoo/phpbbdirectory/styles/glowbug_v1/template/comments.html
+++ b/glowbug-forum/ext/ernadoo/phpbbdirectory/styles/glowbug_v1/template/comments.html
@@ -1,4 +1,4 @@
-{% include 'simple_header.html' %}
+{% include 'overall_header.html' %}
 	<div class="directory-comments">
 	{% if S_AUTH_COMM %}
 		<form id="postform" method="post" action="{{ S_POST_ACTION }}" >
