--- a/glowbug-forum/ext/ernadoo/phpbbdirectory/styles/glowbug_v1/template/view_cat.html
+++ b/glowbug-forum/ext/ernadoo/phpbbdirectory/styles/glowbug_v1/template/view_cat.html
@@ -43,104 +43,89 @@
 	</div>
 	{% if site %}
 	{% for site in site %}
-	<div id="l{{ site.LINK_ID }}" class="forumbg">
-		<div class="inner">
-			<ul class="topiclist">
-				<li class="header">
-					<dl>
-						<dt>
-							{% if 'no_flag' not in site.IMG_FLAG %}
+		<div id="p{{ site.LINK_ID }}" class="post has-profile bg2 {% if site.S_NEW_LINK %}new{% endif %} view-cat-post">
+			<div class="inner">
+				<dl class="postprofile" id="profile{{ site.LINK_ID }}">
+					<dt>
+						<div class="avatar-container">
+							<a href="{{ site.U_LINK }}" class="avatar" {{ site.ON_CLICK }} >
+								<img src="{{ site.U_THUMB }}" class="avatar" alt="{{ lang('DIR_THUMB') }}" />
+							</a>
+						</div>
+						<p class="submitted-by">{{ lang('DIR_USER_PROP') }} {{ site.USER }}</p>
+					</dt>
+					{% if site.NOTE %}
+						<dd class="profile-custom-field">
+							<strong>{{ lang('DIR_NOTE') }}{{ lang('COLON') }}</strong> <span id="dir_note{{ site.LINK_ID }}">{{ site.NOTE }}</span>
+						</dd>
+					{% endif %}
+					{% if site.U_COMMENT %}
+						<dd class="profile-custom-field">
+							<a href="{{ site.U_COMMENT }}">
+								<span>{{ site.NB_COMMENT }}</span>
+							</a>
+						</dd>
+					{% endif %}
+					{% if site.NOTE %}
+						<dd class="profile-custom-field responsive-hide">
+							<span id="dir_vote{{ site.LINK_ID }}">{{ site.NB_VOTE }}</span>
+						</dd>
+					{% endif %}
+					{% if site.VOTE_LIST %}
+						<dd class="profile-custom-field">
+							<div id="form_vote">
+								<form action="{{ site.U_FORM_VOTE }}" method="post" data-ajax="phpbbdirectory.add_vote" data-refresh="true">
+									<div>{{ site.VOTE_LIST }}&nbsp;<input type="submit" name="submit_vote" value="{{ lang('DIR_VOTE') }}" class="button2" /></div>
+								</form>
+							</div>
+						</dd>
+					{% endif %}
+				</dl>
+				<div class="postbody">
+					<div id="post_content{{ site.LINK_ID }}">
+						<h3>
+							{% if site.IMG_FLAG and 'no_flag' not in site.IMG_FLAG %}
 								<img class="site-flag" src="{{ site.IMG_FLAG }}" title="{{ site.NAME }}" />
 							{% endif %}
-							{{ site.NAME }}
-						</dt>
-						<dd>&nbsp;</dd>
-					</dl>
-				</li>
-			</ul>
-			<div id="p{{ site.LINK_ID }}" class="post has-profile bg2 {% if site.S_NEW_LINK %}new{% endif %}">
-				<div class="inner">
-					<dl class="postprofile" id="profile{{ site.LINK_ID }}">
-						<dt>
-							<div class="avatar-container">
-								<a href="{{ site.U_LINK }}" class="avatar" {{ site.ON_CLICK }} >
-									<img src="{{ site.U_THUMB }}" class="avatar" alt="{{ lang('DIR_THUMB') }}" />
-								</a>
-							</div>
-							<p class="submitted-by">{{ lang('DIR_USER_PROP') }} {{ site.USER }}</p>
-						</dt>
-						{% if site.NOTE %}
-							<dd class="profile-custom-field">
-								<strong>{{ lang('DIR_NOTE') }}{{ lang('COLON') }}</strong> <span id="dir_note{{ site.LINK_ID }}">{{ site.NOTE }}</span>
-							</dd>
+							<a href="{{ site.U_LINK }}" {{ site.ON_CLICK }} title="{{ site.NAME }}">
+								{{ site.NAME }}
+							</a>
+							<span class="responsive-hide">&nbsp;({{ site.U_LINK }})</span>
+							&nbsp;({{ site.COUNT }})
+						</h3>
+						{% if not S_IS_BOT %}
+							<ul class="post-buttons">
+								{% if site.RSS %}
+									<li>
+										<a href="{{ site.RSS }}" class="button icon-button feed-icon" title="{{ lang('FEED') }} - {{ site.NAME }}"><span>{{ lang('FEED') }} - {{ site.NAME }}</span></a>
+									</li>
+								{% endif %}
+								{% if site.U_EDIT %}
+									<li>
+										<a href="{{ site.U_EDIT }}" title="{{ lang('DIR_EDIT_SITE') }}" class="button icon-button edit-icon"><span>{{ lang('DIR_EDIT_SITE') }}</span></a>
+									</li>
+								{% endif %}
+								{% if site.U_DELETE %}
+									<li>
+										<a href="{{ site.U_DELETE }}" title="{{ lang('DIR_DELETE_SITE') }}" class="button icon-button delete-icon" data-ajax="phpbbdirectory.delete_site"><span>{{ lang('DIR_DELETE_SITE') }}</span></a>
+									</li>
+								{% endif %}
+							</ul>
 						{% endif %}
-						{% if site.U_COMMENT %}
-							<dd class="profile-custom-field">
-								<a href="{{ site.U_COMMENT }}" class="commentlink">
-									<span>{{ site.NB_COMMENT }}</span>
-								</a>
-							</dd>
+						<p class="author">
+							{% if site.TIME %}{{ site.TIME }}{% endif %}
+						</p>
+						<div class="content">{{ site.DESCRIPTION }}</div>
+						{% if site.BANNER %}
+							<div id="sig{{ site.LINK_ID }}" class="signature">{{ site.BANNER }}</div>
 						{% endif %}
-						{% if site.NOTE %}
-							<dd class="profile-custom-field responsive-hide">
-								<span id="dir_vote{{ site.LINK_ID }}">{{ site.NB_VOTE }}</span>
-							</dd>
-						{% endif %}
-						{% if site.VOTE_LIST %}
-							<dd class="profile-custom-field">
-								<div id="form_vote">
-									<form action="{{ site.U_FORM_VOTE }}" method="post" data-ajax="phpbbdirectory.add_vote" data-refresh="true">
-										<div>{{ site.VOTE_LIST }}&nbsp;<input type="submit" name="submit_vote" value="{{ lang('DIR_VOTE') }}" class="button2" /></div>
-									</form>
-								</div>
-							</dd>
-						{% endif %}
-					</dl>
-					<div class="postbody">
-						<div id="post_content{{ site.LINK_ID }}">
-							<h3>
-								<a href="{{ site.U_LINK }}" {{ site.ON_CLICK }} title="{{ site.NAME }}">
-									{{ site.NAME }}
-								</a>
-								<span class="responsive-hide">&nbsp;({{ site.U_LINK }})</span>
-								&nbsp;({{ site.COUNT }})
-							</h3>
-							{% if not S_IS_BOT %}
-								<ul class="post-buttons">
-									{% if site.RSS %}
-										<li>
-											<a href="{{ site.RSS }}" class="button icon-button feed-icon" title="{{ lang('FEED') }} - {{ site.NAME }}"><span>{{ lang('FEED') }} - {{ site.NAME }}</span></a>
-										</li>
-									{% endif %}
-									{% if site.U_EDIT %}
-										<li>
-											<a href="{{ site.U_EDIT }}" title="{{ lang('DIR_EDIT_SITE') }}" class="button icon-button edit-icon"><span>{{ lang('DIR_EDIT_SITE') }}</span></a>
-										</li>
-									{% endif %}
-									{% if site.U_DELETE %}
-										<li>
-											<a href="{{ site.U_DELETE }}" title="{{ lang('DIR_DELETE_SITE') }}" class="button icon-button delete-icon" data-ajax="phpbbdirectory.delete_site"><span>{{ lang('DIR_DELETE_SITE') }}</span></a>
-										</li>
-									{% endif %}
-								</ul>
-							{% endif %}
-							<p class="author">
-								{% if site.TIME %}{{ site.TIME }}{% endif %}
-							</p>
-							<div class="content">{{ site.DESCRIPTION }}</div>
-							{% if site.BANNER %}
-								<div id="sig{{ site.LINK_ID }}" class="signature">{{ site.BANNER }}</div>
-							{% endif %}
-						</div>
 					</div>
-					<div class="back2top">
-						<a href="#top" class="top" title="{{ lang('BACK_TO_TOP') }}" data-original-title="{{ lang('BACK_TO_TOP') }}">{{ lang('BACK_TO_TOP') }}</a>
-					</div>
-
+				</div>
+				<div class="back2top">
+					<a href="#top" class="top" title="{{ lang('BACK_TO_TOP') }}" data-original-title="{{ lang('BACK_TO_TOP') }}">{{ lang('BACK_TO_TOP') }}</a>
 				</div>
 			</div>
 		</div>
-	</div>
 	{% endfor %}
 	{% endif %}
 
@@ -154,7 +139,7 @@
 
 	{% if (site or pagination) and not S_IS_BOT  %}
 		<!-- IF S_SELECT_SORT_DAYS and not S_IS_BOT -->
-			<form method="post" action="{{ S_PAGE_ACTION }}">
+			<form id="viewtopic" method="post" action="{{ S_PAGE_ACTION }}">
 				{% include 'directory_display_options.html' %}
 			</form>
 		<!-- ENDIF -->
