Changes to style and color

--- a/glowbug-forum/_dev/styles/glowbug_v1/theme/scss/_custom-variables.scss
+++ b/glowbug-forum/_dev/styles/glowbug_v1/theme/scss/_custom-variables.scss
@@ -3,7 +3,7 @@ $base-font-size: 16;
 // Colors
 $color-01: #ffffff; // white
 $color-02: #000000; // black
-$color-03: #5d5aff; // blue
+$color-03: #4a7742; // greenish
 $color-04: #444444; // blackish
 $color-05: #804080; // blue
 $color-06: #eeeeee; // gray
@@ -17,3 +17,7 @@ $respond-01: 1199px;
 $respond-02: 768px;
 $respond-03: 540px;
 $respond-04: 480px;
+
+// Icons
+$folder-icon: \f07b;
+$feed-icon: \f09e;
