--- a/glowbug-forum/_dev/styles/glowbug_v1/theme/scss/fa/_mixins.scss
+++ b/glowbug-forum/_dev/styles/glowbug_v1/theme/scss/fa/_mixins.scss
@@ -24,3 +24,8 @@
       -ms-transform: scale($horiz, $vert);
           transform: scale($horiz, $vert);
 }
+
+// Unicode function
+@function unicode($str){
+    @return unquote("\"") + $str + unquote("\"");
+}
