--- a/glowbug-forum/ext/ernadoo/phpbbdirectory/styles/glowbug_v1/template/view_cat.html
+++ b/glowbug-forum/ext/ernadoo/phpbbdirectory/styles/glowbug_v1/template/view_cat.html
@@ -43,7 +43,7 @@
 	</div>
 	{% if site %}
 	{% for site in site %}
-		<div id="p{{ site.LINK_ID }}" class="post has-profile bg2 {% if site.S_NEW_LINK %}new{% endif %} view-cat-post">
+		<div id="p{{ site.LINK_ID }}" class="post has-profile profile-left bg2 {% if site.S_NEW_LINK %}new{% endif %} view-cat-post">
 			<div class="inner">
 				<dl class="postprofile" id="profile{{ site.LINK_ID }}">
 					<dt>
