--- a/glowbug-forum/_dev/styles/glowbug_v1/theme/scss/_custom-mixins.scss
+++ b/glowbug-forum/_dev/styles/glowbug_v1/theme/scss/_custom-mixins.scss
@@ -124,3 +124,8 @@
 	-o-transition: $value;
 	transition: $value;
 }
+
+// Unicode functions
+@function unicode($str){
+    @return unquote("\"") + $str + unquote("\"");
+}
