Create compact and extended header elements, added define template and other reusable templates

--- a/khyeras/_dev/styles/khyeras_v1/theme/scss/_mixins.scss
+++ b/khyeras/_dev/styles/khyeras_v1/theme/scss/_mixins.scss
@@ -51,6 +51,8 @@
 		flex: 1 1 100%;
 	} @else if $type == max {
 		flex: 0 0 auto;
+	} @else if $type == adapt {
+		flex: 1 1 auto;
 	} @else {
 		flex: 0 1 auto;
 	}
