--- a/khyeras/_dev/styles/khyeras_v1/theme/scss/_header.scss
+++ b/khyeras/_dev/styles/khyeras_v1/theme/scss/_header.scss
@@ -183,9 +183,6 @@
 			@include sizing(90px, 100px);
 			float: right;
 		}
-		ul {
-			list-style: none;
-		}
 		.user-avatar {
 			position: absolute;
 			right: -65px;
@@ -199,19 +196,20 @@
 				padding: 0 0 100% 0;
 			}
 		}
-		.welcome-buttons {
-			clear: both;
-			text-align: center;
-			@include flex-flow(row wrap);
-			margin: 0 -2.5px 15px -2.5px;
-			& > li {
-				width: 50%;
-				@include flex(grow);
-				& > a {
-					display: block;
-					margin: 0 2.5px 5px 2.5px;
-					padding: 10px;
-				}
+	}
+	.welcome-buttons {
+		clear: both;
+		text-align: center;
+		@include flex-flow(row wrap);
+		margin: 0 -2.5px 15px -2.5px;
+		list-style: none;
+		& > li {
+			@include flex(adapt);
+			& > a {
+				display: block;
+				margin: 0 2.5px 5px 2.5px;
+				padding: 10px;
+				min-width: 80px;
 			}
 		}
 	}
